--- a/bb-theia-plugin/package.json
+++ b/bb-theia-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@bulutbilisimciler/bb-theia-plugin",
+  "name": "bulutbilisimciler-bb-theia-plugin",
   "version": "1.1.0",
   "keywords": [
     "theia-extension"
